deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unsafe-track
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unsafe-track
  template:
    metadata:
      labels:
        app: unsafe-track
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "true"
    spec:
      containers:
        - name: unsafe-track
          image: ghcr.io/dcnick3/unsafe-track:ref-8a9a0042645e7e1f6b19caf531d4c48d22715811
